# simple-data-analysis-project

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt
src/app/: app.py  utils.py
src/data/: cancer_example.csv
src/notebooks/: EDA_and_Model.ipynb  __init__.py
